<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mvp.views.user.SignInActivity"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:textSize="56sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="6dp"
            android:padding="8dp"
            android:background="@color/white"
            android:hint="@string/email_text" />

        <EditText android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_marginTop="6dp"
            android:padding="8dp"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_sign_in_hint"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/email_password_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/white"
            android:enabled="false"
            android:padding="0dp"
            android:layout_marginLeft="-5dip"
            android:layout_marginRight="-5dip"
            android:backgroundTint="@color/divider"
            app:backgroundTint="@color/divider"
            android:text="@string/sign_in_text" />

            <Button
                android:id="@+id/link_sign_up_button"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/go_to_recording_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_google_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@color/white"
                android:text="@string/quick_access_text"
                android:textSize="16sp"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-5dip"
                android:layout_marginRight="-5dip"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>

