<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TitleStyle"
        android:text="@string/challenge_achieved_text"
        android:gravity="center"
        android:textColor="@color/primary"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/primary">
    </View>

    <ImageView
        android:id="@+id/challenge_achieved_type_challenge_image"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/challenge_1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/experience_points" />

    <TextView
        android:id="@+id/challenge_achieved_experience_points_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_workout_text"
        android:gravity="center" />

    <TextView
        android:id="@+id/challenge_achieved_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/large_text"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>