<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    android:padding="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TitleStyle"
            android:text="@string/help_text"
            android:gravity="center"
            android:textColor="@color/primary"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="20dp"
            android:background="@color/primary">
        </View>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="48dp"
                android:layout_marginBottom="-24dp"
                android:src="@drawable/mapbox_marker_icon_default"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_map_put_markers"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_trash"
                android:background="#DDFFFFFF"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:tint="@color/primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_map_delete_marker"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_in_route"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center"
                android:padding="2dp"
                android:background="@drawable/circle_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/help_map_in_route"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_refresh"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center"
                android:padding="2dp"
                android:background="@drawable/circle_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/help_map_refresh"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
