<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TitleStyle"
        android:text="@string/level_achieved_title_text"
        android:gravity="center"
        android:textColor="@color/primary"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/primary">
    </View>

    <TextView
        android:id="@+id/level_achieved_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TitleStyle"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:text="@string/level_achieved_title_text"
        android:gravity="center"
        android:textColor="@color/primary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/level_achieved_image"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.5"
            android:src="@drawable/level_1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:gravity="center"
                android:src="@drawable/experience_points" />

            <TextView
                android:id="@+id/level_achieved_experience_points_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_workout_text"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congratulations_text"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>


</LinearLayout>